<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/settings_domain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_control"
            android:hint="@string/domain_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/textColorHint" />

        <EditText
            android:id="@+id/settings_port"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_control"
            android:hint="@string/port_hint"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/textColorHint" />

        <Button
            android:id="@+id/settings_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_control"
            android:text="@string/save"
            android:textColor="@color/textColorHint" />

    </LinearLayout>

</FrameLayout>